compiler-core/src/snapshots/gleam_core__config__tests__name_with_dash.snap
---
source: compiler-core/src/config.rs
assertion_line: 738
expression: "toml::from_str::<PackageConfig>(input).unwrap_err().to_string()"
---
TOML parse error at line 2, column 8
  |
2 | name = "one-two"
  |        ^^^^^^^^^
Package names may only contain lowercase letters, numbers, and underscores
